2010-07-14  Deepak Bhole <dbhole@redhat.com>

	* plugin/icedteanp/java/sun/applet/PluginMessageConsumer.java: Add a new
	processedIds list to track which instances have been instantiated.
	(okToProcess): Register width as priority only after handle is acquired.
	Process resize messages only after tag and handle are processed.
	(notifyWorkerIsFree): Add instance id to processedIds list if the worked
	being free'd is an init worker.
	(getFreeWorker): Create new normal worked only if worker count is less
	than MAX_WORKERS - PRIORITY_WORKERS.
	(dumpWorkerStatus): New method. Useful when debugging -- prints status of
	all workers.
	* plugin/icedteanp/java/sun/applet/PluginMessageHandlerWorker.java
	(toString): New method. Returns the string representation of the worker
	instance at call time.

2010-07-13  Deepak Bhole <dbhole@redhat.com>

	* plugin/icedteanp/IcedTeaJavaRequestProcessor.h: Set timeout to 120
	seconds (previous commit mistakenly changed it to 10).
	* plugin/icedteanp/IcedTeaPluginUtils.h: Print debug info only in debug
	mode.

2010-06-14  Deepak Bhole <dbhole@redhat.com>

	* plugin/icedteanp/IcedTeaJavaRequestProcessor.cc: Use variadic macro
	for debug message printing.
	* plugin/icedteanp/IcedTeaJavaRequestProcessor.h: Same.
	* plugin/icedteanp/IcedTeaNPPlugin.cc: Same.
	* plugin/icedteanp/IcedTeaPluginRequestProcessor.cc: Same.
	* plugin/icedteanp/IcedTeaPluginUtils.cc: Same.
	* plugin/icedteanp/IcedTeaPluginUtils.h: Same.
	* plugin/icedteanp/IcedTeaScriptablePluginObject.cc: Same.

2010-07-12 Jon VanAlten <jon.vanalten@redhat.com>

	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioDataLine.java
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioLine.java
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioSourceDataLine.java
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioTargetDataLine.java:
	Eliminate spurious exception throwing from open, close, read, write,